Swagger Docs included in Angular/docs
