# config/routes.rb
@@ -49,6 +49,15 @@ Rails.application.routes.draw do
 
   # Sidekiq Web UI (protect this in production!)
   require 'sidekiq/web'
+  # Basic Auth for Sidekiq Dashboard
+  if Rails.env.production?
+    Sidekiq::Web.use Rack::Auth::Basic do |username, password|
+      # Set these in your Render/Railway ENV variables
+      ActiveSupport::SecurityUtils.secure_compare(::Digest::SHA256.hexdigest(username), ::Digest::SHA256.hexdigest(ENV["SIDEKIQ_USERNAME"])) &
+        ActiveSupport::SecurityUtils.secure_compare(::Digest::SHA256.hexdigest(password), ::Digest::SHA256.hexdigest(ENV["SIDEKIQ_PASSWORD"]))
+    end
+  end
+  
   mount Sidekiq::Web => '/sidekiq'
 
 
